--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,3 +4,5 @@ plugins:
   wikimedia_consumer_secret: ""
   wikimedia_callback_url: "oob"
   wikimedia_auth_site: "https://meta.wikimedia.org"
+  wikimedia_auth_oauth: "Special:OAuth"
+  wikimedia_auth_script: "/w"
